# Marvel_Rivals_Ranked_Ban_Advisor

./: .gitignore  IMPLEMENTATION_PLAN.md  MR_ban.jfif  README.md  app.py  pyproject.toml  requirements.txt
src/: __init__.py  models.py  name_matching.py  ocr.py  ocr_engines.py  pipeline.py  rivalsmeta.py  rivalsmeta_browser.py  scoring.py
tests/: test_name_matching.py  test_ocr.py  test_pipeline.py  test_rivalsmeta.py  test_rivalsmeta_browser.py  test_scoring.py  test_smoke.py
