[project]
name = "marvel-rivals-ban-helper"
version = "0.1.0"
description = "Local MVP for Marvel Rivals ban recommendations from enemy-team screenshots."
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12.0",
  "httpx>=0.27.0",
  "pydantic>=2.7.0",
  "streamlit>=1.35.0",
  "Pillow>=10.3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
]
ocr = [
  "easyocr>=1.7.0",
]
browser = [
  "playwright>=1.45.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
